--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,6 @@ name = "pypi"
 
 [packages]
 beautifulsoup4 = "*"
-black = "*"
 tiktoken = "*"
 openai = "*"
 unstructured = "*"
@@ -17,12 +16,15 @@ streamlit = "*"
 streamlit-chat = "*"
 tqdm = "*"
 isort = "*"
-langchainhub = "*"
 firecrawl-py = "*"
-langchain-community = "*"
 langsmith = "*"
 pinecone = "*"
 pillow = "*"
+langchain = "*"
+langchain-openai = "*"
+langchain-community = "*"
+langchainhub = "*"
+black = "*"
 
 [dev-packages]
 
